// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 hZTrlU"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 kSReWc"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a primary color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 cVOGeL"
    color="primary"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 hZTrlU"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <input
    class="RadioButton-sc-17mep65-0 fPrfqJ"
    color="warning"
    type="radio"
  />
</div>
`;
